--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -1,65 +1,79 @@
-\documentclass[10pt,oneside,a4paper,titlepage]{book} 
-\setlength{\topmargin}{-2cm}
-\setlength{\headsep}{1cm}
-\setlength{\textheight}{26.5cm}
-\setlength{\textwidth}{17.3cm}
-\setlength{\evensidemargin}{-0.7cm}
-\setlength{\oddsidemargin}{-0.7cm}
-    
-\includeonly{introduction,buildScripts,depMngmt,organizeBuildLogic,commandLine,mavenPoms}
-\usepackage{upquote}
-\usepackage{tabularx}
-\usepackage{fancyvrb}
-\usepackage{ccaption}
-\usepackage{color}
+\documentclass[10pt,oneside,a4paper,titlepage]{book} \setlength{
+\topmargin}{-2cm} \setlength{
+\headsep}{1cm} \setlength{
+\textheight}{26.5cm} \setlength{
+\textwidth}{17.3cm} \setlength{
+\evensidemargin}{-0.7cm} \setlength{
+\oddsidemargin}{-0.7cm}
 
-\definecolor{MyGray}{rgb}{0.96,0.97,0.98}
-\makeatletter\newenvironment{graybox}{%
-   \begin{lrbox}{\@tempboxa}\begin{minipage}{\columnwidth}}{\end{minipage}\end{lrbox}%
-   \colorbox{MyGray}{\usebox{\@tempboxa}}
-}\makeatother
+\def\Api_root#1{
+\def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
+
+\includeonly{introduction,buildScripts,tasks,depMngmt,organizeBuildLogic,gradleWrapper,commandLine,mavenPoms} 
+\usepackage{upquote} 
+\usepackage{tabularx} 
+\usepackage{fancyvrb} 
+\usepackage{ccaption} 
+\usepackage{color}
+\usepackage{array}
+
+\definecolor{MyGray}{rgb}{0.96,0.97,0.98} 
+\makeatletter
+\newenvironment{graybox}{
+
+%
+\begin{lrbox}
+	{\@tempboxa}
+	\begin{minipage}
+		{\columnwidth}}{
+	\end{minipage}
+\end{lrbox}
+
+%
+\colorbox{MyGray}{
+\usebox{\@tempboxa}} }
+\makeatother
 
 % \usepackage{listings}
 % \lstloadlanguages{Java} 
 % \lstset{language=Java}
 % \DefineShortVerb{\+}
-\renewcommand{\figurename}{Listing}
+\renewcommand{\figurename}{Listing} 
 \usepackage[colorlinks=true]{hyperref}
 
-\begin{document}
-\newcommand\HRule{\noindent\rule{\linewidth}{1.5pt}}
+\begin{document} 
+\newcommand\HRule{
+\noindent\rule{\linewidth}{1.5pt}} 
 \begin{titlepage}
-   \vspace*{\stretch{1}}
-   \HRule
-   \begin{flushleft}
-      \Huge {\bf Gradle} \\
-      \LARGE A build system \\
-   \end{flushleft}
-   \HRule
-\vspace*{\stretch{0.2}}
-\begin{center}
-    \large Version \input{../../../build/docs/userguide/data/version}
-\end{center}
-\vspace*{\stretch{0.5}}
-\begin{center}
-\large Copyright \copyright  2007-2008 Hans Dockter
-\end{center}
-\vspace*{\stretch{0.2}}
-\begin{center}
-Copies of this document may be made for your own use and for distribution to others, provided that you do not 
-charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether 
-distributed in print or electronically.
-\end{center}   
+	\vspace*{\stretch{1}} \HRule 
+	\begin{flushleft}
+		\Huge {\bf Gradle} \\
+		\LARGE A build system \\
+	\end{flushleft}
+	\HRule \vspace*{\stretch{0.2}} 
+	\begin{center}
+		\large Version \input{../../../build/docs/userguide/data/version} 
+	\end{center}
+	\vspace*{\stretch{0.5}} 
+	\begin{center}
+		\large Copyright \copyright 2007-2008 Hans Dockter 
+	\end{center}
+	\vspace*{\stretch{0.2}} 
+	\begin{center}
+		Copies of this document may be made for your own use and for distribution to others, provided that you do not charge any fee for such copies and further provided that each copy contains this Copyright Notice, whether distributed in print or electronically. 
+	\end{center}
 \end{titlepage}
-\pagenumbering{roman}
-\tableofcontents
-\newpage
-\pagenumbering{arabic}
-\include{introduction}
-\include{buildScripts}
+\pagenumbering{roman} 
+\tableofcontents 
+\newpage 
+\pagenumbering{arabic} 
+\include{introduction} 
+\include{buildScripts} 
+\include{tasks} 
 \include{depMngmt} 
-\include{organizeBuildLogic}         
-\appendix
+\include{organizeBuildLogic} 
+\include{gradleWrapper} 
+\appendix 
 \include{commandLine} 
 \include{mavenPoms} 
 
