--- a/src/docs/userguide/depMngmt.tex
+++ b/src/docs/userguide/depMngmt.tex
@@ -240,7 +240,7 @@ dependencies {
 }
 \end{Verbatim}
 
-This adds the repository \texttt{'http://gradle.sourceforge.net/repository'} before the Maven2Repo (ibiblio) repo. Before means Gradle tries to find a dependency first in the newly added repository. \texttt{classpathResolvers} is of type \texttt{RepositoryContainer}. Have a look at its \href{\api_root/org}{API} to learn more.
+This adds the repository \texttt{'http://gradle.sourceforge.net/repository'} before the Maven2Repo (ibiblio) repo. Before means Gradle tries to find a dependency first in the newly added repository. \texttt{classpathResolvers} is of type \texttt{RepositoryContainer}. Have a look at its \href{}{API} to learn more.
 
 Gradle, thanks to Ivy under its hood, is extremely flexible regarding repositories:
 \begin{itemize}
