--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -9,7 +9,7 @@
 \def\Api_root#1{
 \def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
 
-\includeonly{introduction,buildScripts,tasks,depMngmt,organizeBuildLogic,gradleWrapper,commandLine,mavenPoms} 
+\includeonly{introduction,buildScripts,tasks,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -34,16 +34,15 @@
 \usebox{\@tempboxa}} }
 \makeatother
 
-% \usepackage{listings}
-% \lstloadlanguages{Java} 
-% \lstset{language=Java}
-% \DefineShortVerb{\+}
 \renewcommand{\figurename}{Listing} 
 \usepackage[colorlinks=true]{hyperref}
 
 \begin{document} 
 \newcommand\HRule{
 \noindent\rule{\linewidth}{1.5pt}} 
+\newcommand{\codeInput}[1]{\VerbatimInput[framesep=1mm]{#1}}
+\newcommand{\outputInput}[1]{\VerbatimInput[frame=single, framesep=1mm, framerule=1mm]{#1}}
+
 \begin{titlepage}
 	\vspace*{\stretch{1}} \HRule 
 	\begin{flushleft}
@@ -71,9 +70,12 @@
 \include{buildScripts} 
 \include{tasks} 
 \include{depMngmt} 
+\include{buildLifecycle}
+\include{multiproject}
 \include{organizeBuildLogic} 
 \include{gradleWrapper} 
 \appendix 
+\include{ideSupport} 
 \include{commandLine} 
 \include{mavenPoms} 
 
