--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -9,7 +9,7 @@
 \def\Api_root#1{
 \def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
 
-\includeonly{introduction,buildScripts,tasks,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,commandLine,ideSupport,mavenPoms} 
+\includeonly{introduction,buildScripts,tasks,plugins,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -69,6 +69,7 @@
 \include{introduction} 
 \include{buildScripts} 
 \include{tasks} 
+\include{plugins} 
 \include{depMngmt} 
 \include{buildLifecycle}
 \include{multiproject}
