--- a/src/docs/userguide/master.tex
+++ b/src/docs/userguide/master.tex
@@ -9,7 +9,7 @@
 \def\Api_root#1{
 \def\api_root{#1}} \Api_root{http://www.gradle.org/api/} 
 
-\includeonly{introduction,buildScripts,tasks,plugins,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,commandLine,ideSupport,mavenPoms} 
+\includeonly{introduction,buildScripts,javaTutorial,tasks,plugins,depMngmt,buildLifecycle,multiproject,organizeBuildLogic,gradleWrapper,potentialTraps,commandLine,ideSupport,mavenPoms} 
 \usepackage{upquote} 
 \usepackage{tabularx} 
 \usepackage{fancyvrb} 
@@ -41,7 +41,9 @@
 \newcommand\HRule{
 \noindent\rule{\linewidth}{1.5pt}} 
 \newcommand{\codeInput}[1]{\VerbatimInput[framesep=1mm]{#1}}
-\newcommand{\outputInput}[1]{\VerbatimInput[frame=single, framesep=1mm, framerule=1mm]{#1}}
+\newcommand{\codeGradleFile}[2][]{\VerbatimInput[frame=single,label=#1gradlefile,framesep=1mm]{#2}}
+\newcommand{\outputInput}[1]{\VerbatimInput[frame=single,framesep=1mm,framerule=1mm]{#1}}
+\newcommand{\outputInputGradle}[2][]{\VerbatimInput[frame=single,label=current dir: #1,framesep=1mm,framerule=1mm]{#2}}
 
 \begin{titlepage}
 	\vspace*{\stretch{1}} \HRule 
@@ -68,6 +70,7 @@
 \pagenumbering{arabic} 
 \include{introduction} 
 \include{buildScripts} 
+\include{javaTutorial} 
 \include{tasks} 
 \include{plugins} 
 \include{depMngmt} 
@@ -76,6 +79,7 @@
 \include{organizeBuildLogic} 
 \include{gradleWrapper} 
 \appendix 
+\include{potentialTraps} 
 \include{ideSupport} 
 \include{commandLine} 
 \include{mavenPoms} 
